fix graph alignments

--- a/src/main/resources/public/stylesheets/NavBar.css
+++ b/src/main/resources/public/stylesheets/NavBar.css
@@ -94,7 +94,7 @@
   display: block;
   width:97px;
   height:26px;
-  padding-top:18px;
+  padding-bottom:16px;
 }
 
 .linkbutton:hover {
